Rearrage the files

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,28 +1,30 @@
+/.classpath
+/.project
 /ActionLibrary.class
 /CalendarUtil.class
 /CommandPackage.class
 /CommandPackageLogic.class
 /CommandParser.class
+/CommandParserDemo.class
 /CommandParserLogic.class
 /DatePackage.class
 /DatePackagelogic.class
+/DateParser.class
 /DateTimeDemo.class
-/DateTree.class
 /DateUtil$1.class
 /DateUtil.class
 /ParseTest.class
 /PriorityTaskList.class
-/Search.class
+/Readme.txt
+/Searcher.class
+/Storage.class
 /Task.class
+/TaskBomber/
 /TaskBomber$COMMAND_TYPE.class
 /TaskBomber.class
 /TimeLibrary.class
-/DateParser$isDate$getDateTime.class
-/DateParser$isDate.class
-/DateParser.class
-/TaskView.fxml
-/TaskViewController.class
-/UI.class
+/TimeLine.class
 /UndoRedoOp.class
+/archive.zip
+/desktop.ini
 /lib/
-/CommandParserDemo.class
