--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,8 +1,14 @@
-/.settings/
-/Logic$COMMAND_TYPE.class
-/Logic.class
-/RootLayout.fxml
-/Searcher.class
-/Storage.class
-/TaskView.fxml
-/TimeLine.class
+/src/
+/parser/
+/ActionLibrary.class
+/CalendarUtil.class
+/CommandPackage.class
+/CommandParser.class
+/CommandParserDemo.class
+/DatePackage.class
+/DateParser.class
+/DateTimeDemo.class
+/DateUtil$1.class
+/DateUtil.class
+/ParseTest.class
+/TimeLibrary.class
