--- a/bin/.classpath
+++ b/bin/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="src" path="Parser"/>
 	<classpathentry kind="src" path="Storage"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry exported="true" kind="lib" path="lib/joda-time-2.8.2/joda-time-2.8.2-dist.tar/joda-time-2.8.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="lib/joda-time-2.8.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
