add today task v0.3

--- a/src/logic/.gitignore
+++ b/src/logic/.gitignore
@@ -13,3 +13,6 @@
 /UndoRedoOpTest.class
 /LogicTestCases.class
 /LogicMain.class
+/CommandLibrary.class
+/CommandType$Command.class
+/CommandType.class
