--- a/src/.classpath
+++ b/src/.classpath
@@ -5,5 +5,7 @@
 	<classpathentry kind="lib" path="joda-time-2.8.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="openjfx-dialogs-1.0.3.jar"/>
+	<classpathentry kind="lib" path="controlsfx-8.40.9.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
