--- a/src/.classpath
+++ b/src/.classpath
@@ -5,7 +5,8 @@
 	<classpathentry kind="lib" path="joda-time-2.8.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="openjfx-dialogs-1.0.3.jar"/>
-	<classpathentry kind="lib" path="controlsfx-8.40.9.jar"/>
+	<classpathentry kind="lib" path="testFx-3.1.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="testfx-core-4.0.1-alpha.jar"/>
+	<classpathentry kind="lib" path="guava-18.0.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
